[gd_scene load_steps=3 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonHost" type="Button" parent="."]
margin_left = 120.0
margin_top = 154.0
margin_right = 438.0
margin_bottom = 242.0
text = "Host Game"

[node name="TextboxMaxConn" type="LineEdit" parent="ButtonHost"]
margin_left = 230.0
margin_top = -54.0
margin_right = 320.0
margin_bottom = -10.0
text = "2"

[node name="LabelMaxConn" type="Label" parent="ButtonHost"]
margin_top = -54.0
margin_right = 220.0
margin_bottom = -10.0
custom_styles/normal = SubResource( 1 )
text = "Max amount of players:"
align = 1
valign = 1

[node name="ButtonJoin" type="Button" parent="."]
margin_left = 611.0
margin_top = 154.0
margin_right = 929.0
margin_bottom = 243.0
text = "Join Game"

[node name="TextboxHostPort" type="LineEdit" parent="ButtonJoin"]
margin_left = 229.0
margin_top = -54.0
margin_right = 318.0
margin_bottom = -10.0
text = "4242"

[node name="TextboxHostIP" type="LineEdit" parent="ButtonJoin"]
margin_left = -1.0
margin_top = -54.0
margin_right = 219.0
margin_bottom = -10.0
text = "127.0.0.1"
[connection signal="pressed" from="ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="pressed" from="ButtonJoin" to="." method="_on_ButtonJoin_pressed"]
